testsuite/tests/parser/should_run/StringStartsWithNull.hs
module Main where

main :: IO ()
main = print "\0a"
