testsuite/tests/parser/should_fail/T17879a.hs
module Main where

Foo :: ()
Foo = ()
